# lib60870copy

./: .gitignore  BUILD_AND_TEST.ps1  CERTIFICATE_SETUP_GUIDE.md  CMakeLists.txt  CMakeLists.txt.copy  COMPILE_AND_TEST.ps1  COMPLETE_TESTING_GUIDE.md  COMPLIANCE_SUMMARY.md  IEC62351-5.txt  QUICK_START.md  QUICK_VERIFY.md  README.md  VERIFICATION_GUIDE.md  VERIFY_SESSION.ps1  WINDOWS_READY.md  generate_certs.ps1  generate_certs.sh  run_all_tests_ubuntu.sh
lib60870-C/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CLEAN_STALE_ARTIFACTS.ps1  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  IEC62351_5_COMPLIANCE_GUIDE.md  Makefile  ZERO_CHECK.vcxproj  cmake_install.cmake  lib60870-C.sln  lib60870.vcxproj  lib60870.vcxproj.filters  mbedtls_static.vcxproj  mbedtls_static.vcxproj.filters  rebuild_and_run.ps1  rebuild_debug.ps1  test_ap_security.vcxproj  test_ap_security.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
lib60870-C/Release/: lib60870.lib  mbedtls_static.lib
lib60870-C/build-new/: CMakeCache.txt  client_out.txt  cmake_install.cmake  server_out.txt
lib60870-C/build-new/examples/: cmake_install.cmake
lib60870-C/build-new/examples/iec62351_5_demo/: cmake_install.cmake
lib60870-C/build-new/mbedtls/: cmake_install.cmake
lib60870-C/build-new/mbedtls/include/: cmake_install.cmake
lib60870-C/build-new/mbedtls/pkgconfig/: cmake_install.cmake  mbedcrypto.pc  mbedtls.pc  mbedx509.pc
lib60870-C/build-new/src/: cmake_install.cmake  version.rc
lib60870-C/build-new/src/Debug/: lib60870.exp  lib60870.lib
lib60870-C/build-new/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
lib60870-C/build-new/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
lib60870-C/config/: lib60870_config.h
lib60870-C/examples/: CMakeLists.txt
lib60870-C/examples/cs101_slave/: CMakeLists.txt  slave_example.c
lib60870-C/examples/cs101_slave_files/: cs101_slave_files.c
lib60870-C/examples/cs104_client/: simple_client.c
lib60870-C/examples/cs104_server/: simple_server.c
lib60870-C/examples/cs104_server_files/: cs104_server_files.c
lib60870-C/examples/iec62351_5_demo/: CMakeLists.txt  iec62351_5_demo_client.c  iec62351_5_demo_server.c
lib60870-C/lib60870-C/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  cs101_master_balanced.vcxproj  cs101_master_balanced.vcxproj.filters  cs101_master_unbalanced.vcxproj  cs101_master_unbalanced.vcxproj.filters  cs101_slave.vcxproj  cs101_slave.vcxproj.filters  cs101_slave_files.vcxproj  cs101_slave_files.vcxproj.filters  cs104_client.vcxproj  cs104_client.vcxproj.filters  cs104_client_async.vcxproj  cs104_client_async.vcxproj.filters  cs104_redundancy_server.vcxproj  cs104_redundancy_server.vcxproj.filters  cs104_server.vcxproj  cs104_server.vcxproj.filters  cs104_server_files.vcxproj  cs104_server_files.vcxproj.filters  cs104_server_no_threads.vcxproj  cs104_server_no_threads.vcxproj.filters  multi_client_server.vcxproj  multi_client_server.vcxproj.filters  tls_client.vcxproj  tls_client.vcxproj.filters  tls_server.vcxproj  tls_server.vcxproj.filters
lib60870-C/lib60870-C/examples/cs101_master_balanced.dir/Release/: cs101_master_balanced.exe.recipe
lib60870-C/lib60870-C/examples/cs101_master_unbalanced.dir/Release/: cs101_master_unbalanced.exe.recipe
lib60870-C/lib60870-C/examples/cs101_slave.dir/Release/: cs101_slave.exe.recipe
lib60870-C/lib60870-C/examples/cs101_slave_files.dir/Release/: cs101_slave_files.exe.recipe
lib60870-C/lib60870-C/examples/cs104_client.dir/Release/: cs104_client.exe.recipe
lib60870-C/lib60870-C/examples/cs104_client_async.dir/Release/: cs104_client_async.exe.recipe
lib60870-C/lib60870-C/examples/cs104_redundancy_server.dir/Release/: cs104_redundancy_server.exe.recipe
lib60870-C/lib60870-C/examples/cs104_server.dir/Release/: cs104_server.exe.recipe
lib60870-C/lib60870-C/examples/iec62351_5_demo/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  iec62351_5_demo.sln  iec62351_5_demo_client.vcxproj  iec62351_5_demo_client.vcxproj.filters  iec62351_5_demo_server.vcxproj  iec62351_5_demo_server.vcxproj.filters
lib60870-C/lib60870.dir/Release/: lib60870.lib.recipe
lib60870-C/lib60870.dir/Release/lib60870.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
lib60870-C/mbedtls_static.dir/Release/mbedtls_static.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  mbedtls_static.lastbuildstate
lib60870-C/src/: CMakeLists.txt
lib60870-C/src/common/: security_public_key.c
lib60870-C/src/hal/tls/mbedtls/: mbedtls_config.h
lib60870-C/src/iec60870/cs101/: cs101_asdu.c  cs101_information_objects.c
lib60870-C/src/iec60870/cs104/: cs104_connection.c  cs104_slave.c
lib60870-C/src/inc/: security_public_key.h
lib60870-C/src/inc/api/: cs104_connection.h  iec60870_common.h
lib60870-C/src/inc/internal/: aprofile_context.h  aprofile_internal.h  cs101_asdu_internal.h  information_objects_internal.h
lib60870-C/test_ap_security.dir/Release/: test_ap_security.exe.recipe
lib60870-C/test_ap_security.dir/Release/test_ap_security.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lib60870-C/tests/: CMakeLists.txt  CMakeLists.txt.new  test_ap_security.c  test_iec62351_5_compliance.c  test_iec62351_5_full.c
lib60870-C/tests.dir/Release/: tests.exe.recipe
lib60870-C/tests.dir/Release/tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lib60870-C/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
(+143 files in other folders)
