# Add executables
add_executable(cs101_master_balanced cs101_master_balanced/master_example.c)
add_executable(cs101_master_unbalanced cs101_master_unbalanced/master_example.c)
add_executable(cs101_slave cs101_slave/slave_example.c)
add_executable(cs101_slave_files cs101_slave_files/cs101_slave_files.c)
add_executable(cs104_client cs104_client/simple_client.c)
add_executable(cs104_client_async cs104_client_async/cs104_client_async.c)
add_executable(cs104_server cs104_server/simple_server.c)
add_executable(cs104_server_no_threads cs104_server_no_threads/cs104_server_no_threads.c)
add_executable(cs104_server_files cs104_server_files/cs104_server_files.c)
add_executable(cs104_redundancy_server cs104_redundancy_server/cs104_redundancy_server.c)
add_executable(multi_client_server multi_client_server/multi_client_server.c)
add_executable(tls_client tls_client/tls_client.c)
add_executable(tls_server tls_server/tls_server.c)

# IEC 62351-5:2023 Demo Applications
add_subdirectory(iec62351_5_demo)

# Link libraries
target_link_libraries(cs101_master_balanced PRIVATE lib60870)
target_link_libraries(cs101_master_unbalanced PRIVATE lib60870)
target_link_libraries(cs101_slave PRIVATE lib60870)
target_link_libraries(cs101_slave_files PRIVATE lib60870)
target_link_libraries(cs104_client PRIVATE lib60870)
target_link_libraries(cs104_client_async PRIVATE lib60870)
target_link_libraries(cs104_server PRIVATE lib60870)
target_link_libraries(cs104_server_no_threads PRIVATE lib60870)
target_link_libraries(cs104_server_files PRIVATE lib60870)
target_link_libraries(cs104_redundancy_server PRIVATE lib60870)
target_link_libraries(multi_client_server PRIVATE lib60870)
target_link_libraries(tls_client PRIVATE lib60870)
target_link_libraries(tls_server PRIVATE lib60870)

# IEC 62351-5 demos
# target_link_libraries(iec62351_5_demo_server PRIVATE lib60870)
# target_link_libraries(iec62351_5_demo_client PRIVATE lib60870)

# target_link_libraries(cs101_master_balanced PRIVATE file_service)
# target_link_libraries(cs101_master_unbalanced PRIVATE file_service)
# target_link_libraries(cs101_slave PRIVATE file_service)
# target_link_libraries(cs101_slave_files PRIVATE file_service)
# target_link_libraries(cs104_client PRIVATE file_service)
# target_link_libraries(cs104_client_async PRIVATE file_service)
# target_link_libraries(cs104_server PRIVATE file_service)
# target_link_libraries(cs104_server_no_threads PRIVATE file_service)
# target_link_libraries(cs104_server_files PRIVATE file_service)
# target_link_libraries(cs104_redundancy_server PRIVATE file_service)
# target_link_libraries(multi_client_server PRIVATE file_service)
# target_link_libraries(tls_client PRIVATE file_service)
# target_link_libraries(tls_server PRIVATE file_service)
# target_link_libraries(iec62351_5_demo_server PRIVATE file_service)
# target_link_libraries(iec62351_5_demo_client PRIVATE file_service)